Se subieron los archivos de Tarea Libro

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /clases/ConceptosBasicos/nbproject/private/
 diagramaBD.img
+/tareas/TareaLibro/nbproject/private/
+/tareas/Libro/nbproject/private/
+/tareas/Libro/build/
