Sesion 1 de marzo, automovil

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ diagramaBD.img
 /tareas/TareaLibro/nbproject/private/
 /tareas/Libro/nbproject/private/
 /tareas/Libro/build/
+/clases/ConceptosBasicos/build/
