Clase 15 de Marzo, composición

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ diagramaBD.img
 /tareas/Libro/nbproject/private/
 /tareas/Libro/build/
 /clases/ConceptosBasicos/build/
+/tareas/ReutilizacionCodigo2209/nbproject/private/
+/clases/ReutilizacionCodigo2209/nbproject/private/
+/clases/ReutilizacionCodigo2209/build/
