--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ diagramaBD.img
 /tareas/ReutilizacionCodigo2209/nbproject/private/
 /clases/ReutilizacionCodigo2209/nbproject/private/
 /clases/ReutilizacionCodigo2209/build/
+/tareas/Composicion/nbproject/private/
+/tareas/Composicion/build/
+/tareas/Composicion/dist/
