Clase 19 de Abril, Atributos y métodos de clase

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ diagramaBD.img
 /tareas/Composicion/nbproject/private/
 /tareas/Composicion/build/
 /tareas/Composicion/dist/
+/tareas/JavaBasico2209/nbproject/private/
+/clases/JavaBasico2209/nbproject/private/
+/clases/JavaBasico2209/build/
+/clases/JavaBasico2209/dist/
