--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ diagramaBD.img
 /clases/JavaBasico2209/nbproject/private/
 /clases/JavaBasico2209/build/
 /clases/JavaBasico2209/dist/
+/tareas/Cuentahabiente/nbproject/private/
+/tareas/Cuentahabiente/build/
