Clase 28 de Abril, Excepciones

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ diagramaBD.img
 /clases/JavaBasico2209/dist/
 /tareas/Cuentahabiente/nbproject/private/
 /tareas/Cuentahabiente/build/
+/clases/JavaBasico2209Parte2/nbproject/private/
+/clases/JavaBasico2209Parte2/build/
+/clases/JavaBasico2209Parte2/dist/
