Tarea, Cifrado Cesar

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ diagramaBD.img
 /clases/JavaBasico2209Parte2/nbproject/private/
 /clases/JavaBasico2209Parte2/build/
 /clases/JavaBasico2209Parte2/dist/
+/tareas/CifradoCesar/nbproject/private/
+/tareas/CifradoCesar/build/
+/tareas/CifradoCesar/dist/
